使用 Colaboratory 建立

--- a/(Spark Tutorial) 上課講義 (解答) 2019 Spark on PM25.ipynb
+++ b/(Spark Tutorial) 上課講義 (解答) 2019 Spark on PM25.ipynb
@@ -27,21 +27,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JjpVj8Ne_p6R",
-        "colab_type": "code",
-        "colab": {}
+        "id": "JjpVj8Ne_p6R"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yZX_HQWt68dR",
-        "colab_type": "code",
         "outputId": "ca1c1ea9-2cad-4bfd-b838-aa4cb43c3300",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -53,7 +50,7 @@
         "! wget -O init_env.sh https://www.dropbox.com/s/6bnwn8u2hz19s59/init_env.sh && \\\n",
         "bash init_env.sh"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1518,9 +1515,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ky97pnWo7EBr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ky97pnWo7EBr"
       },
       "source": [
         "import os, sys\n",
@@ -1530,29 +1525,26 @@
         "sys.path.append(\"/usr/local/spark/python/lib/pyspark.zip\")\n",
         "sys.path.append(\"/usr/local/spark/python/lib/py4j-0.10.4-src.zip\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I1kaE7kK7PRF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "I1kaE7kK7PRF"
       },
       "source": [
         "from pyspark import SparkContext\n",
         "from pyspark import SparkConf\n",
         "sc =SparkContext()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ltQpoNZY6bv6",
-        "colab_type": "text"
+        "id": "ltQpoNZY6bv6"
       },
       "source": [
         "# 利用Spark 分析台灣2015 PM2.5資料集"
@@ -1561,8 +1553,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zbWZ0dIo6bv7",
-        "colab_type": "text"
+        "id": "zbWZ0dIo6bv7"
       },
       "source": [
         "<a id=\"load_data\"></a>\n",
@@ -1572,8 +1563,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C1qgJDsb6bv8",
-        "colab_type": "text"
+        "id": "C1qgJDsb6bv8"
       },
       "source": [
         "### 步驟1: 將2015空氣監控資料，上傳至colab"
@@ -1583,7 +1573,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "SVXc7N-P6bv8",
-        "colab_type": "code",
         "outputId": "7028101e-db75-4c5a-dbc4-3a24d7d2da0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1593,7 +1582,7 @@
       "source": [
         "!wget -O pm25.csv \"https://www.dropbox.com/s/zkn3ba7pitv83el/pm2.5Taiwan.csv?dl=0\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1627,7 +1616,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "bYAxfnu1SkXO",
-        "colab_type": "code",
         "outputId": "9ded09da-51c3-4522-de5b-eb187ce8288d",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1637,7 +1625,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1651,21 +1639,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y8u7Bxqi6bwF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Y8u7Bxqi6bwF"
       },
       "source": [
         "weather = sc.textFile(\"./pm25.csv\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aMVBdYNO6bwH",
-        "colab_type": "text"
+        "id": "aMVBdYNO6bwH"
       },
       "source": [
         "### 步驟2: 試試看是否成功上傳  (使用count( ), first( ), collect( ), take( ) )"
@@ -1675,7 +1660,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "QeiPKyGe6bwH",
-        "colab_type": "code",
         "outputId": "133c262e-6549-47d7-f0aa-45e8aa0629e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1686,7 +1670,7 @@
         "weather.count()\n",
         "weather.first()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1706,7 +1690,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "-6xuyI9R6bwL",
-        "colab_type": "code",
         "outputId": "3492103d-af32-4487-bea6-c2bd4e791338",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1716,7 +1699,7 @@
       "source": [
         "weather.take(5)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1739,8 +1722,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6lZMZ1m06bwO",
-        "colab_type": "text"
+        "id": "6lZMZ1m06bwO"
       },
       "source": [
         "# 練習1: 讓我們求取2015年，大里每小時的平均pm25數值。\n",
@@ -1756,8 +1738,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A7aedWEz6bwO",
-        "colab_type": "text"
+        "id": "A7aedWEz6bwO"
       },
       "source": [
         "### 步驟一：資料分割 (使用map () 與 split( ))"
@@ -1767,7 +1748,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "_DDuC6At6bwP",
-        "colab_type": "code",
         "outputId": "64ff5003-1edd-4373-df39-9c1ceeb081b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1778,7 +1758,7 @@
         "weatherParse = weather.map(lambda line : line.split(\",\"))\n",
         "print(weatherParse.first())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1792,8 +1772,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CB_BMIXf6bwR",
-        "colab_type": "text"
+        "id": "CB_BMIXf6bwR"
       },
       "source": [
         "### 步驟二：將大里站資料從全部資料集中挑選出來 (filter)"
@@ -1802,8 +1781,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "P-np2VJz6bwR",
-        "colab_type": "text"
+        "id": "P-np2VJz6bwR"
       },
       "source": [
         "須留意unicode與string的差別,  u'大里'"
@@ -1813,7 +1791,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "PwzyA92o6bwS",
-        "colab_type": "code",
         "outputId": "a9e5f146-186a-40c8-9a10-b3fa76eb6dd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1824,7 +1801,7 @@
         "wea_dali = weatherParse.filter(lambda x: x[1] == '大里' and x[2]== \"PM2.5\")\n",
         "print(wea_dali.take(50))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,8 +1815,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ImDZp8136bwV",
-        "colab_type": "text"
+        "id": "ImDZp8136bwV"
       },
       "source": [
         "### 步驟三：資料清洗 (使用 map(), str.strip())\n",
@@ -1851,9 +1827,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uqf9UPnz6bwV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Uqf9UPnz6bwV"
       },
       "source": [
         "def strip_symbol(x):\n",
@@ -1864,14 +1838,13 @@
         "\n",
         "wea_dali = wea_dali.map(strip_symbol)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vWnybfVB6bwY",
-        "colab_type": "text"
+        "id": "vWnybfVB6bwY"
       },
       "source": [
         "### 步驟四：key value pair的產生 (重要的操作概念)\n",
@@ -1886,7 +1859,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "iGjDPGJl6bwZ",
-        "colab_type": "code",
         "outputId": "3a5c3593-501d-4b51-872b-8f59a920e8f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1896,7 +1868,7 @@
       "source": [
         "print(wea_dali.first())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1911,7 +1883,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "OPJlnWbz6bwa",
-        "colab_type": "code",
         "outputId": "96a5cd57-7aaa-4b34-c487-c9dff39bcfe5",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1931,7 +1902,7 @@
         "\n",
         "wea_dali_byHourkey.first()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1973,8 +1944,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kNfl3Vio6bwd",
-        "colab_type": "text"
+        "id": "kNfl3Vio6bwd"
       },
       "source": [
         "### 步驟五： 利用flatMap(), reduceByKey(), groupByKey()，將不同日期但相同時間的pm25值收集起來。(使用flatMap)"
@@ -1984,7 +1954,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "rQWgeD-w6bwf",
-        "colab_type": "code",
         "outputId": "4c0b317e-8eb1-4a9e-8a03-c36f80292f06",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1995,7 +1964,7 @@
         "byHourkey = wea_dali.flatMap(hourKeyGen)\n",
         "byHourkey.reduceByKey(lambda x,y: x+y).take(10)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2023,8 +1992,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dtQpIRWJ6bwh",
-        "colab_type": "text"
+        "id": "dtQpIRWJ6bwh"
       },
       "source": [
         "### 步驟六： 計算大里區每個小時區間中，平均之pm25數值 (使用reduceByKey)"
@@ -2034,7 +2002,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "SlXpUgc36bwi",
-        "colab_type": "code",
         "outputId": "542fe836-bda1-41b7-d6ed-7abaf456ff39",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2045,7 +2012,7 @@
         "avg_pm25_hour = byHourkey.reduceByKey(lambda x,y: x+y)\n",
         "avg_pm25_hour.map(lambda x:(x[0],x[1]/365)).collect()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2087,8 +2054,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Mko2dCdz6bwk",
-        "colab_type": "text"
+        "id": "Mko2dCdz6bwk"
       },
       "source": [
         "### 步驟七： 根據pm25平均濃度，進行排序。使用top( )"
@@ -2098,7 +2064,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "_qgZSxDs6bwl",
-        "colab_type": "code",
         "outputId": "a6189369-5e00-40c0-ba8d-b59f26dbce28",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2109,7 +2074,7 @@
         "avg_pm25_hour = byHourkey.reduceByKey(lambda x,y: x+y)\n",
         "avg_pm25_hour.map(lambda x:(x[0],x[1]/365.0)).map(lambda x: (x[1],x[0])).top(24)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2151,8 +2116,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sReXkMgl6bwo",
-        "colab_type": "text"
+        "id": "sReXkMgl6bwo"
       },
       "source": [
         "### 步驟八： 計算每個時間點的統計值，例如最大值、最小值、平均值、標準差(使用 groupByKey()與mapValues())"
@@ -2162,7 +2126,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "1hYPP0FB6bwo",
-        "colab_type": "code",
         "outputId": "f98e324f-8f36-420e-9bc5-b62fc86af8a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2177,7 +2140,7 @@
         "for i in sorted(hour_stat_list):\n",
         "    print (i[0],max(i[1]),min(i[1]),np.mean(i[1]),np.var(i[1]))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2214,8 +2177,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AF0Vd9yZ6bwq",
-        "colab_type": "text"
+        "id": "AF0Vd9yZ6bwq"
       },
       "source": [
         "# 練習2: 請求取2015年，全國pm2.5最高的前十個工作站測點以及其日期。"
@@ -2224,9 +2186,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cJBYpK6G6bws",
-        "colab_type": "code",
-        "colab": {}
+        "id": "cJBYpK6G6bws"
       },
       "source": [
         "### weatherParse 為原始資料集\n",
@@ -2252,14 +2212,13 @@
         "    \n",
         "    return date_loc_time_measure"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4sEW-ZIo6bww",
-        "colab_type": "code",
         "outputId": "4cee9618-7a13-4205-e95e-50bb8d2b82ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2279,7 +2238,7 @@
         "for i in top10pm25:\n",
         "    print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2302,9 +2261,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z3Ahgkm-6bwy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z3Ahgkm-6bwy"
       },
       "source": [
         "precTop10=[]\n",
@@ -2313,14 +2270,13 @@
         "    precTop10.append(result[0])\n",
         "    stationsTop10.append(result[1])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OAYJncl_6bwz",
-        "colab_type": "text"
+        "id": "OAYJncl_6bwz"
       },
       "source": [
         "Plot your results."
@@ -2330,7 +2286,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "JuqkVh376bwz",
-        "colab_type": "code",
         "outputId": "c8b21425-bf84-4b10-ac7f-87ed9465c18d",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2353,7 +2308,7 @@
         "plt.xticks(index + bar_width, stationsTop10, rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2372,8 +2327,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cWayHXWE6bw2",
-        "colab_type": "text"
+        "id": "cWayHXWE6bw2"
       },
       "source": [
         "# 練習3: 請算算看2015全國哪個測站，紫爆天數最多？\n",
@@ -2384,7 +2338,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Liq1IcEX6bw2",
-        "colab_type": "code",
         "outputId": "40ddf03a-cbe9-4da7-fbdf-e032f0ed163a",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2412,20 +2365,21 @@
         "    return (location, sum(y)/len(y))\n",
         "\n",
         "clean_pm25_data_set = pm25_data_set.map(strip_symbol)\n",
-        "Worst = clean_pm25_data_set\\\n",
+        "Worst = pm25_data_set\\\n",
+        "        .map(strip_symbol)\\\n",
         "        .map(computeAverage)\\\n",
         "        .filter(lambda x:x[1]>60)\\\n",
-        "        .groupByKey()\\\n",
-        "        .mapValues(list)\\\n",
-        "        .map(lambda x:(x[0],len(x[1])))\\\n",
+        "        .map(lambda x: (x[0],1))\\\n",
+        "        .reduceByKey(lambda x,y:x+y)\n",
         "        .sortBy(lambda x:x[1], ascending=False).collect()\n",
+        "\n",
         "\n",
         "for loc in Worst:\n",
         "  print(loc)\n",
         "\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2501,14 +2455,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-4izkMXe6bw5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-4izkMXe6bw5"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
