update to Spark 3.0.1 and fix rdd.take() issue

--- a/(Spark Tutorial) 上課講義 RDD 基本概念.ipynb
+++ b/(Spark Tutorial) 上課講義 RDD 基本概念.ipynb
@@ -36,7 +36,7 @@
       },
       "source": [
         "# 環境初始化 (大約三至五分鐘)\n",
-        "! wget -O init_env.sh https://www.dropbox.com/s/6bnwn8u2hz19s59/init_env.sh && \\\n",
+        "! wget -O init_env.sh https://www.dropbox.com/s/cce2nnozquh8twz/init_env%20spark%203.0.1.sh?dl=0 && \\\n",
         "bash init_env.sh"
       ],
       "execution_count": 30,
@@ -144,7 +144,7 @@
         "os.environ['PYSPARK_PYTHON'] = \"/usr/local/bin/python\"\n",
         "sys.path.append(\"/usr/local/spark/python/\")\n",
         "sys.path.append(\"/usr/local/spark/python/lib/pyspark.zip\")\n",
-        "sys.path.append(\"/usr/local/spark/python/lib/py4j-0.10.4-src.zip\")"
+        "sys.path.append(\"/usr/local/spark/python/lib/py4j-0.10.9-src.zip\")"
       ],
       "execution_count": 0,
       "outputs": []
